# hermes-os

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
agents/: registry.yaml
api/: openapi.yaml
config/: hermes.yaml
contracts/: bottleneck.schema.json  business.schema.json  decision.schema.json  executive-brief.schema.json  experiment.schema.json  goal.schema.json  kpi.schema.json  lesson.schema.json  opportunity.schema.json  strategy.schema.json
decisions/: DEC-0001-document-metadata.md  DEC-0002-hermes-executive-operating-model.md  DEC-0003-execution-context-git-safety-policy.md  DEC-0004-business-knowledge-system.md  DEC-0005-entity-lifecycle-management.md
docs/: 00-operating-model.md  01-vision.md  02-architecture.md  03-core-principles.md  04-system-map.md  05-roadmap.md  11-business-lifecycle.md  12-decision-engine-specification.md  13-scoring-model.md  14-agent-architecture.md  15-agent-orchestrator.md  16-data-contracts.md  17-contract-mapping.md  18-developer-guide.md  19-api-development-guide.md  20-executive-model.md  21-agent-registry.md  22-shared-services.md  23-extension-framework.md  24-hermes-agent-integration.md  25-hermes-v1-implementation-roadmap.md  99-project-log.md
examples/: business.example.json
knowledge/: registry.yaml
runtime/: 01-capability-registry.md  02-context-engine.md  03-planning-engine.md  04-execution-engine.md
skills/: registry.yaml
specs/: bottleneck.md  business.md  decision.md  executive-brief.md  experiment.md  goal.md  kpi.md  lesson.md  opportunity.md  strategy.md
(+76 files in other folders)
