[project]
name = "hermes"
version = "0.1.0"
description = "Hermes OS runtime"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
hermes = "hermes.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hermes"]

[tool.pytest.ini_options]
pythonpath = ["src"]
